planning_tests/scheduling_planning/jobshop/valid_problems/valid_problem_4.jsp
nb_jobs nb_machines optimal
4 4 46 0
Times
8 5 10 10
5 4 8 9
5 5 5 3
3 3 9 10
Machines
2 3 1 4
3 4 1 2
2 1 3 4
2 4 1 3
Starts
8 16 23 33 
0 6 15 23 
3 33 38 43 
0 3 6 21 