planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_1_6.jsp
nb_jobs nb_machines optimal
4 4 37 0
Times
5 4 8 9
5 5 5 3
9 3 5 4
3 3 9 10
Machines
3 4 1 2
2 1 3 4
3 2 1 4
2 4 1 3
Starts
0 6 20 28 
3 15 25 30 
0 3 6 15 
5 14 28 33 